--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["flow", "es2015"],
+  "presets": ["flow", "es2015", "react-native"],
   "plugins": ["transform-flow-strip-types"]
 }
