--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.3",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react-native": "^4.0.0",
+    "eslint": "^4.12.1",
+    "eslint-plugin-flowtype": "^2.39.1",
     "flow": "^0.2.3",
+    "flow-bin": "^0.60.1",
     "jest": "^21.2.1"
   },
   "main": "index.js",
@@ -22,12 +27,17 @@
     "test": "jest",
     "flow": "flow"
   },
-  "jest": {
-    "modulePathIgnorePatterns": [
-      "__tests__/__mocks__/"
-    ]
-  },
   "dependencies": {
+    "react-native-music-control": "^0.4.13",
     "react-native-sound": "^0.10.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ]
   }
 }
