--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-music-player-service",
-  "version": "0.1.1",
+  "version": "0.1.3-beta",
   "description": "Ready to use music player control",
   "license": "MIT",
   "private": false,
