--- a/package.json
+++ b/package.json
@@ -51,6 +51,12 @@
     ],
     "modulePaths": [
       "<rootDir>"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/src/*.js",
+      "!**/node_modules/**",
+      "!**/vendor/**"
     ]
   }
 }
